Change readme and todo

--- a/TODO
+++ b/TODO
@@ -1,7 +1,13 @@
 TO-DO lists
 ===========
 
-Желательно добавить:
+Планируется
+-----------
+
+* Передача в качестве аргументов пути к заметкам вместо списка файлов
+* Скрыть блокноты по вспомогательным тегам типа _templates_
+
+Желательно добавить
+-------------------
 
 * Сортировку в соответствии с Gnote
-* Скрыть блокноты по вспомогательным тегам типа _templates_
